# cliprogress

./: CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
cmake/: cliprogress-config.cmake.in
examples/: CMakeLists.txt  example.cpp  layout_example.cpp  progress_example.cpp  signal_notifier.cpp
include/cliprogress/: application.hpp  concurrent_queue.hpp  event_queue.hpp  posix_signal_notifier.hpp  progress_indicator.hpp  terminal_writer.hpp  widget.hpp
include/cliprogress/events/: all.hpp  child_event.hpp  close_event.hpp  event.hpp  hide_event.hpp  layout_event.hpp  render_event.hpp  resize_event.hpp  show_event.hpp  termination_event.hpp  timer_event.hpp
include/cliprogress/layout/: box_layout_manager.hpp  layout_item.hpp  layout_manager.hpp  widget_layout_item.hpp
include/cliprogress/progress_plugins/: ewma_rate.hpp  smoothed_eta.hpp  timer.hpp
include/cliprogress/widgets/: animation.hpp  bar.hpp  label.hpp
include/cliprogressbar/: application.hpp  concurrent_queue.hpp  event_queue.hpp  posix_signal_notifier.hpp  progress_data.hpp  terminal_writer.hpp  widget.hpp
include/cliprogressbar/events/: timer_event.hpp
include/cliprogressbar/functional/: progress_bar.hpp
include/cliprogressbar/progress_plugins/: ewma_rate.hpp  smoothed_eta.hpp
include/cliprogressbar/widgets/: animation.hpp  bar.hpp  label.hpp
src/: application.cpp  widget.cpp
tests/: CMakeLists.txt  application.cpp  test_bar_rendered.cpp  test_formatters.cpp  test_throbber.cpp
tests/widgets/: bar.cpp  label.cpp
